syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserServiceDefinition {
  rpc FindById (FindByIdRequest) returns (User);
  rpc FindAll (google.protobuf.Empty) returns (Users);
}

message FindByIdRequest {
  string id = 1;
}

message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
}

message Users {
  repeated User users = 1;
}